--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+    <meta name="description" content="Faça a moda da melhor maneira. A sua maneira.">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <title>POV. Store</title>
   </head>
   <body>
