Atualizacao dos metadados

--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Faça a moda da melhor maneira. A sua maneira.">
-    <link rel="icon" type="image/png" href="/favicon.ico">
-    <title>POV. Store</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="author" content="Matheus Cerqueira" />
+		<meta property="og:title" content="POV. Store" />
+		<meta
+			name="description"
+			content="A POV. Store veio para revolucionar o mercado da moda, pondo ela em prática da melhora maneira. A sua maneira."
+		/>
+		<meta
+			property="og:image"
+			content="https://povstore.onrender.com/favicon.ico"
+		/>
+		<meta
+			name="google-site-verification"
+			content="SuWyIoNbhW5yB-AtQDlaI7p1jpuZtNQYvedK2FU-onY"
+		/>
+		<link rel="icon" type="image/png" href="/favicon.ico" />
+		<title>POV. Store</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
