Alteracao da descricao do site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta property="og:title" content="POV. Store" />
 		<meta
 			name="description"
-			content="A POV. Store veio para revolucionar o mercado da moda, pondo ela em prática da melhora maneira. A sua maneira."
+			content="A moda posta em prática da melhor maneira. A sua maneira. Venha conhecer as últimas tendências em roupas e acessórios masculinos, femininos e infantis."
 		/>
 		<meta
 			property="og:image"
